<resources>
    <string name="app_name">Project_LBM</string>
    <string name="send_mail_set">편지 발송 설정</string>
    <string name="send_mail_day">발송 요일</string>
    <string name="send_mail_interval">발송 간격</string>
    <string name="random_mail_set">랜덤 발송</string>
    <string name="text">직접 작성했던 편지가 지금 도착했습니다.!
        밑의 버튼을 눌러서 지금 바로 확인해보세요
        편지를 읽고 간단한 답변도 달아볼 수 있어요</string>
    <string name="text2">오늘 하루에 기억에 남는 장면이나 재밋었던 일, 털어놓기 힘든 일들을 편지로 써봅시다 !
        오늘 쓴 편지는 저장되어 다시 볼수 있습니다 미래의 나를 위해 지금 밑의 버튼을 클릭해 추억을 기록하고 보관해봅시다</string>
    <string name="menu_title">메뉴</string>
    <string name="item1">설정</string>
    <string name="item2">삭제</string>
    <string name="item3">정렬</string>
    <string name="item3_1">오름차순</string>
    <string name="item3_2">내림차순</string>
    <string name="alarm_setup">알림 설정</string>
    <string name="alarm_on">알림켜기</string>
</resources>